@@ -376,6 +376,7 @@ pk_cmd_load_file (int argc, struct pk_cmd_arg argv[], uint64_t uflags)
   char *arg;
   char *filename = NULL;
   char *emsg;
+  pk_val exit_exception;
 
   assert (argc == 2);
   arg = PK_CMD_ARG_STR (argv[1]);
@@ -398,10 +399,12 @@ pk_cmd_load_file (int argc, struct pk_cmd_arg argv[], uint64_t uflags)
   else
     goto no_file;
 
-  if (pk_compile_file (poke_compiler, filename, NULL /* exception */)
+  if (pk_compile_file (poke_compiler, filename, &exit_exception)
       != PK_OK)
     /* Note that the compiler emits its own error messages.  */
     goto error;
+  if (exit_exception != PK_NULL)
+    poke_handle_exception (exit_exception);
 
   if (filename != arg)
     free (filename);
